# my-agent

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  Makefile  README.md  REFACTOR.md  SECURITY_UPGRADE.md  debug_output.txt  dev.ps1  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pom.xml  pyproject.toml
backend/: README.md  pyproject.toml  test_integration.py
backend/app/: celery_app.py  celery_config.py  main.py
backend/app/agent/: __init__.py  graph.py
backend/app/api/: router.py
backend/app/api/routes/: agent.py  branch.py  chat.py  knowledge.py  (+5 more)
backend/app/converter/: __init__.py  converter.py
backend/app/core/: checkpointer.py  constants.py  context.py  crypto.py  db.py  exceptions.py  logging.py  redis.py  settings.py
backend/app/dependencies/: auth.py  services.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  document_chunk.py  knowledge_base.py  message.py  message_embedding.py  user.py  user_model.py
backend/app/nodes/: __init__.py  chatbot_node.py  context_node.py  kb_precheck_node.py  planning_node.py  rewrite_node.py  search_node.py  summary_node.py
backend/app/schema/: base.py  conversation.py  model.py  user.py  user_model.py
backend/app/services/: agent_service.py  auth_service.py  chat_service.py  checkpoint_service.py  conversation_cache_service.py  conversation_service.py  custom.py  custom_model_adapter.py  document_parse_service.py  embedding_service.py  knowledge_service.py  langfuse_service.py  model_service.py  user_model_service.py
backend/app/tasks/: __init__.py  document_tasks.py  embedding_tasks.py
backend/app/tools/: __init__.py  rag_tool.py  tavily_tool.py
backend/app/utils/: alioss_util.py  content.py  crypto_migration.py  jwt_token.py  password.py  session_store.py  snowflake.py  tree_builder.py
backend/migrations/: 000_init_schema.sql  001_add_message_embedding.sql  V1.2__add_user_model.sql  V1.3__add_advanced_model_params.sql  add_message_tree.sql  full_schema.sql  init_kb_schema.sql  init_schema.sql
backend/scripts/: migrate_crypto.py
backend/tests/: conftest.py  test_health.py  test_oss.py  test_upload.py
(+373 files in other folders)
